tests/paczka1/small_fuzzy/17701567.err
Error in line 2: 9GxY036gq S984 75,2
Error in line 7: MmQro8dPkgk A187 9,1
Error in line 11: MmQro8dPkgk S128 67,0
